--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.servlet.multipart.max-request-size=1000MB
 spring.servlet.multipart.enabled=true
 server.port=8181
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-#logging.file.name=/log/errorlog.log
+#logging.file.name=/tmp/springboot/openHouseAIBackend/errorlog.log
+logging.file.name=log/errorlog.log
