--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.2.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.openhousebackendapi</groupId>
+	<groupId>MultifilesBacthProcessing</groupId>
 	<artifactId>com.openhousebackendapi</artifactId>
 	<version>openHouseBackendAPI</version>
 	<packaging>war</packaging>
